@startuml
'https://plantuml.com/class-diagram

        interface ShootStrategy{
            + executeShoot(AbstractAircraft aircraft, int direction, int power): List<BaseBullet>
        }

        class StraightShoot
        class ScatterShoot
        class CircularShoot

        ShootStrategy <|.. StraightShoot : 实现
        ShootStrategy <|.. ScatterShoot : 实现
        ShootStrategy <|.. CircularShoot : 实现

        abstract class AbstractAircraft{
            # shootStrategy: ShootStrategy
            + shoot(): List<BaseBullet>
            + setShootStrategy(Strategy strategy)
        }

        class HeroAircraft
        class EliteEnemy
        class SuperEliteEnemy
        class BossEnemy

        AbstractAircraft <|-- HeroAircraft
        AbstractAircraft <|-- EliteEnemy
        AbstractAircraft <|-- SuperEliteEnemy
        AbstractAircraft <|-- BossEnemy

        AbstractAircraft o--> ShootStrategy : 持有引用 (strategy)

        abstract class AbstractProp{

        }
        class FireProp
        class SuperFireProp

        AbstractProp <|-- FireProp : 火力道具
        AbstractProp <|-- SuperFireProp : 超级火力道具

        FireProp --> HeroAircraft : 调用 changeShootStrategy()
        SuperFireProp --> HeroAircraft : 调用 changeShootStrategy()


@enduml